File System Config
File system seems like it mounts.

--- a/prj.conf
+++ b/prj.conf
@@ -4,14 +4,13 @@ CONFIG_RTT_CONSOLE=y
 CONFIG_UART_CONSOLE=n
 CONFIG_CONSOLE=n
 
+
 # logging
 CONFIG_LOG=y
 CONFIG_LOG_PRINTK=y
 CONFIG_LOG_BACKEND_RTT=y
 CONFIG_LOG_DEFAULT_LEVEL=3
 
-# Incresed stack due to settings API usage
-#CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
 # Bluetooth
 CONFIG_BT=y
@@ -27,17 +26,28 @@ CONFIG_BT_DEVICE_NAME="DataDisc v2"
 CONFIG_BT_DEVICE_APPEARANCE=833
 CONFIG_BT_DEVICE_NAME_DYNAMIC=y
 CONFIG_BT_DEVICE_NAME_MAX=65
-
-# Enable the BMS service
-#CONFIG_BT_BMS=y
-
 CONFIG_BT_KEYS_OVERWRITE_OLDEST=y
-#CONFIG_BT_SETTINGS=y
-#CONFIG_FLASH=y
-#CONFIG_FLASH_PAGE_LAYOUT=y
-#CONFIG_FLASH_MAP=y
-#CONFIG_NVS=y
-#CONFIG_SETTINGS=y
+
+
+# File System
+# Optionally force the file system to be recreated
+#CONFIG_APP_WIPE_STORAGE=y
+
+# fs_dirent structures are big.
+CONFIG_MAIN_STACK_SIZE=2048
+
+# Let __ASSERT do its job
+CONFIG_DEBUG=y
+
+CONFIG_LOG=y
+
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+
+CONFIG_FILE_SYSTEM=y
+CONFIG_FILE_SYSTEM_LITTLEFS=y
+
 
 # Drivers
 CONFIG_SENSOR=y
