Trying to get LittleFS working
LittleFS says the flash is corrupt, so I'm using the QSPI interface to erase the full chip to try LittleFS again.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: Apache-2.0
 set(ZEPHYR_EXTRA_MODULES ${CMAKE_CURRENT_LIST_DIR}/drivers/kx134)
-list(APPEND BOARD_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/boards)
+list(APPEND BOARD_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 list(APPEND DTS_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/drivers)
 
 cmake_minimum_required(VERSION 3.13.1)
