--- a/prj.conf
+++ b/prj.conf
@@ -48,6 +48,18 @@ CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FILE_SYSTEM=y
 CONFIG_FILE_SYSTEM_LITTLEFS=y
 
+CONFIG_NORDIC_QSPI_NOR=y
+CONFIG_NORDIC_QSPI_NOR_FLASH_LAYOUT_PAGE_SIZE=4096
+CONFIG_NORDIC_QSPI_NOR_STACK_WRITE_BUFFER_SIZE=4
+
+CONFIG_MPU_ALLOW_FLASH_WRITE=y
+
+CONFIG_PM_EXTERNAL_FLASH=y
+CONFIG_PM_EXTERNAL_FLASH_DEV_NAME="AT25SL321"
+CONFIG_PM_EXTERNAL_FLASH_BASE=0x0
+CONFIG_PM_EXTERNAL_FLASH_SIZE=0x00400000
+
+CONFIG_MULTITHREADING=y
 
 # Drivers
 CONFIG_SENSOR=y
