--- a/prj.conf
+++ b/prj.conf
@@ -52,6 +52,8 @@ CONFIG_NORDIC_QSPI_NOR=y
 CONFIG_NORDIC_QSPI_NOR_FLASH_LAYOUT_PAGE_SIZE=4096
 CONFIG_NORDIC_QSPI_NOR_STACK_WRITE_BUFFER_SIZE=4
 
+CONFIG_SPI_NOR_SFDP_RUNTIME=y
+
 CONFIG_MPU_ALLOW_FLASH_WRITE=y
 
 CONFIG_PM_EXTERNAL_FLASH=y
