--- a/prj.conf
+++ b/prj.conf
@@ -39,8 +39,6 @@ CONFIG_MAIN_STACK_SIZE=2048
 # Let __ASSERT do its job
 CONFIG_DEBUG=y
 
-CONFIG_LOG=y
-
 CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
 CONFIG_FLASH_PAGE_LAYOUT=y
@@ -75,3 +73,16 @@ CONFIG_PWM=y
 CONFIG_ADC=y
 
 CONFIG_SERIAL=n
+
+#USB related configs
+CONFIG_USB=y
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_DEVICE_PRODUCT="DataDisc"
+CONFIG_USB_DRIVER_LOG_LEVEL_ERR=y
+CONFIG_USB_MASS_STORAGE=y
+CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
+CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
+
+CONFIG_APP_MSC_STORAGE_FLASH_LITTLEFS=y
+
+CONFIG_DISK_DRIVER_FLASH=y
