--- a/prj.conf
+++ b/prj.conf
@@ -10,6 +10,7 @@ CONFIG_LOG=y
 CONFIG_LOG_PRINTK=y
 CONFIG_LOG_BACKEND_RTT=y
 CONFIG_LOG_DEFAULT_LEVEL=3
+CONFIG_EXTRA_EXCEPTION_INFO=y
 
 
 # Bluetooth
@@ -43,23 +44,37 @@ CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 
-CONFIG_FILE_SYSTEM=y
-CONFIG_FILE_SYSTEM_LITTLEFS=y
-
-CONFIG_NORDIC_QSPI_NOR=y
-CONFIG_NORDIC_QSPI_NOR_FLASH_LAYOUT_PAGE_SIZE=4096
-CONFIG_NORDIC_QSPI_NOR_STACK_WRITE_BUFFER_SIZE=4
-
-CONFIG_SPI_NOR_SFDP_RUNTIME=y
-
-CONFIG_MPU_ALLOW_FLASH_WRITE=y
-
+# Nordic specific external flash stuff
 CONFIG_PM_EXTERNAL_FLASH=y
 CONFIG_PM_EXTERNAL_FLASH_DEV_NAME="AT25SL321"
 CONFIG_PM_EXTERNAL_FLASH_BASE=0x0
 CONFIG_PM_EXTERNAL_FLASH_SIZE=0x00400000
 
-CONFIG_MULTITHREADING=y
+CONFIG_FILE_SYSTEM=y
+CONFIG_FILE_SYSTEM_LITTLEFS=y
+
+#CONFIG_NORDIC_QSPI_NOR=y
+#CONFIG_NORDIC_QSPI_NOR_FLASH_LAYOUT_PAGE_SIZE=4096
+#CONFIG_NORDIC_QSPI_NOR_STACK_WRITE_BUFFER_SIZE=4
+
+#CONFIG_SPI_NOR_SFDP_RUNTIME=y
+
+#CONFIG_MPU_ALLOW_FLASH_WRITE=y
+
+#USB related configs
+CONFIG_USB=y
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_DEVICE_PRODUCT="DataDisc"
+CONFIG_USB_DRIVER_LOG_LEVEL_ERR=y
+CONFIG_USB_MASS_STORAGE=y
+CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
+CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
+
+CONFIG_APP_MSC_STORAGE_FLASH_LITTLEFS=y
+
+CONFIG_DISK_DRIVER_FLASH=y
+CONFIG_DISK_FLASH_DEV_NAME="AT25SL321"
+
 
 # Drivers
 CONFIG_SENSOR=y
@@ -74,15 +89,3 @@ CONFIG_ADC=y
 
 CONFIG_SERIAL=n
 
-#USB related configs
-CONFIG_USB=y
-CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_DEVICE_PRODUCT="DataDisc"
-CONFIG_USB_DRIVER_LOG_LEVEL_ERR=y
-CONFIG_USB_MASS_STORAGE=y
-CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
-CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
-
-CONFIG_APP_MSC_STORAGE_FLASH_LITTLEFS=y
-
-CONFIG_DISK_DRIVER_FLASH=y
