Finally Figured Out FIFO

--- a/prj.conf
+++ b/prj.conf
@@ -51,7 +51,8 @@ CONFIG_PM_EXTERNAL_FLASH_BASE=0x0
 CONFIG_PM_EXTERNAL_FLASH_SIZE=0x00400000
 
 CONFIG_FILE_SYSTEM=y
-CONFIG_FILE_SYSTEM_LITTLEFS=y
+CONFIG_FAT_FILESYSTEM_ELM=y
+CONFIG_FS_FATFS_EXFAT=y
 
 #CONFIG_NORDIC_QSPI_NOR=y
 #CONFIG_NORDIC_QSPI_NOR_FLASH_LAYOUT_PAGE_SIZE=4096
