--- a/prj.conf
+++ b/prj.conf
@@ -54,12 +54,6 @@ CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
 CONFIG_FS_FATFS_EXFAT=y
 
-#CONFIG_NORDIC_QSPI_NOR=y
-#CONFIG_NORDIC_QSPI_NOR_FLASH_LAYOUT_PAGE_SIZE=4096
-#CONFIG_NORDIC_QSPI_NOR_STACK_WRITE_BUFFER_SIZE=4
-
-#CONFIG_SPI_NOR_SFDP_RUNTIME=y
-
 #CONFIG_MPU_ALLOW_FLASH_WRITE=y
 
 #USB related configs
@@ -75,7 +69,7 @@ CONFIG_APP_MSC_STORAGE_FLASH_FATFS=y
 
 CONFIG_DISK_DRIVER_FLASH=y
 CONFIG_DISK_FLASH_DEV_NAME="AT25SL321"
-
+CONFIG_DISK_VOLUME_SIZE=0x00400000
 
 # Drivers
 CONFIG_SENSOR=y
