--- a/boards/arm/datadisc_nrf5340/CMakeLists.txt
+++ b/boards/arm/datadisc_nrf5340/CMakeLists.txt
@@ -3,5 +3,5 @@
 
 if (CONFIG_BOARD_DATADISC_NRF5340_CPUAPP AND CONFIG_BOARD_ENABLE_CPUNET)
   zephyr_library()
-  zephyr_library_sources(nrf5340_cpunet_reset.c)
+  zephyr_library_sources(datadisc_nrf5340_cpunet_reset.c)
 endif()
