--- a/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common.dts
+++ b/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common.dts
@@ -139,7 +139,7 @@
 		irq-gpios = <&gpio0 4 GPIO_ACTIVE_HIGH>,
 		 			<&gpio0 5 GPIO_ACTIVE_HIGH>;
 		wakeup-gpios = <&gpio0 6 GPIO_PULL_DOWN>;
-		label = "KX134-1211-ACL";
+		label = "KX134-ALPHA";
 	};
 };
 
@@ -159,7 +159,7 @@
 		irq-gpios = <&gpio1 4 GPIO_ACTIVE_HIGH>,
 					<&gpio1 5 GPIO_ACTIVE_HIGH>;
 		wakeup-gpios = <&gpio1 6 GPIO_PULL_DOWN>;
-		label = "KX134-1211-ACL";
+		label = "KX134-BETA";
 	};
 };
 
