--- a/prj.conf
+++ b/prj.conf
@@ -45,10 +45,10 @@ CONFIG_FLASH_MAP=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 
 # Nordic specific external flash stuff
-CONFIG_PM_EXTERNAL_FLASH=y
-CONFIG_PM_EXTERNAL_FLASH_DEV_NAME="AT25SL321"
+#CONFIG_PM_EXTERNAL_FLASH=y
+#CONFIG_PM_EXTERNAL_FLASH_DEV_NAME="AT25SL321"
 CONFIG_PM_EXTERNAL_FLASH_BASE=0x0
-CONFIG_PM_EXTERNAL_FLASH_SIZE=0x00400000
+#CONFIG_PM_EXTERNAL_FLASH_SIZE=0x00400000
 
 CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
@@ -57,7 +57,7 @@ CONFIG_FS_FATFS_EXFAT=y
 #CONFIG_MPU_ALLOW_FLASH_WRITE=y
 
 #USB related configs
-CONFIG_USB=y
+#CONFIG_USB=y
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_PRODUCT="DataDisc"
 CONFIG_USB_DRIVER_LOG_LEVEL_ERR=y
