--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "nrf-connect.applications": [
-        "c:\\Users\\griffin.adams\\Documents\\GitHub\\datadisc"
+        "c:\\Users\\griffin.adams\\Documents\\GitHub\\datadisc",
+        "${workspaceFolder}"
     ],
-    "nrf-connect.toolchain.path": "PATH"
+    "nrf-connect.toolchain.path": "PATH",
+    "nrf-connect.topdir": "${nrf-connect.sdk:1.8.0}"
 }
