--- a/prj.conf
+++ b/prj.conf
@@ -14,20 +14,20 @@ CONFIG_EXTRA_EXCEPTION_INFO=y
 
 
 # Bluetooth
-CONFIG_BT=y
-CONFIG_BT_DEBUG_LOG=y
-CONFIG_BT_SMP=y
-CONFIG_BT_SIGNING=y
-CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_DIS=y
-CONFIG_BT_ATT_PREPARE_COUNT=5
-CONFIG_BT_BAS=y
-CONFIG_BT_PRIVACY=y
-CONFIG_BT_DEVICE_NAME="DataDisc v2"
-CONFIG_BT_DEVICE_APPEARANCE=833
-CONFIG_BT_DEVICE_NAME_DYNAMIC=y
-CONFIG_BT_DEVICE_NAME_MAX=65
-CONFIG_BT_KEYS_OVERWRITE_OLDEST=y
+#CONFIG_BT=y
+#CONFIG_BT_DEBUG_LOG=y
+#CONFIG_BT_SMP=y
+#CONFIG_BT_SIGNING=y
+#CONFIG_BT_PERIPHERAL=y
+#CONFIG_BT_DIS=y
+#CONFIG_BT_ATT_PREPARE_COUNT=5
+#CONFIG_BT_BAS=y
+#CONFIG_BT_PRIVACY=y
+#CONFIG_BT_DEVICE_NAME="DataDisc v2"
+#CONFIG_BT_DEVICE_APPEARANCE=833
+#CONFIG_BT_DEVICE_NAME_DYNAMIC=y
+#CONFIG_BT_DEVICE_NAME_MAX=65
+#CONFIG_BT_KEYS_OVERWRITE_OLDEST=y
 
 
 # File System
@@ -56,20 +56,40 @@ CONFIG_FS_FATFS_EXFAT=y
 
 #CONFIG_MPU_ALLOW_FLASH_WRITE=y
 
-#USB related configs
-#CONFIG_USB=y
+# USB related configs
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_PRODUCT="DataDisc"
 CONFIG_USB_DRIVER_LOG_LEVEL_ERR=y
 CONFIG_USB_MASS_STORAGE=y
 CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
 CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
+CONFIG_USB_CDC_ACM=y
 
 CONFIG_APP_MSC_STORAGE_FLASH_FATFS=y
 
 CONFIG_DISK_DRIVER_FLASH=y
 CONFIG_DISK_FLASH_DEV_NAME="AT25SL321"
 CONFIG_DISK_VOLUME_SIZE=0x00400000
+
+
+# Shell
+CONFIG_PRINTK=y
+CONFIG_SHELL=y
+CONFIG_SHELL_MINIMAL=y
+CONFIG_SHELL_STACK_SIZE=1024
+CONFIG_SHELL_BACKEND_SERIAL=y
+
+CONFIG_THREAD_MONITOR=y
+CONFIG_INIT_STACKS=y
+CONFIG_BOOT_BANNER=n
+CONFIG_THREAD_NAME=y
+CONFIG_LOG=n
+CONFIG_CBPRINTF_NANO=y
+
+CONFIG_SHELL_BACKEND_SERIAL_CHECK_DTR=y
+CONFIG_UART_LINE_CTRL=y
+CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=51
+
 
 # Drivers
 CONFIG_SENSOR=y
@@ -84,3 +104,4 @@ CONFIG_ADC=y
 
 CONFIG_SERIAL=n
 
+CONFIG_NEWLIB_LIBC=y
