--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 # SPDX-License-Identifier: Apache-2.0
 set(ZEPHYR_EXTRA_MODULES ${CMAKE_CURRENT_LIST_DIR}/drivers/kx134 ${CMAKE_CURRENT_LIST_DIR}/drivers/bm1422)
-list(APPEND BOARD_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
-list(APPEND DTS_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/drivers)
+list(APPEND BOARD_ROOT ${CMAKE_CURRENT_LIST_DIR})
+list(APPEND DTS_ROOT ${CMAKE_CURRENT_LIST_DIR}/drivers)
+list(APPEND DTC_OVERLAY_FILE ${CMAKE_CURRENT_LIST_DIR}/usb.overlay)
 
 cmake_minimum_required(VERSION 3.20.0)
 
