--- a/kx134.conf
+++ b/kx134.conf
@@ -72,7 +72,7 @@ CONFIG_KX134_PW2_USEC=y
 # CONFIG_KX134_DRDYI2 is not set
 CONFIG_KX134_BTSI2=y
 CONFIG_KX134_TDTI2=y
-CONFIG_KX134_WUFI2=y
+CONFIG_KX134_WUFI2=n
 # CONFIG_KX134_TPI2 is not set
 
 #
@@ -118,7 +118,7 @@ CONFIG_KX134_OBTS_ODR_0HZ781=y
 CONFIG_KX134_WUFTH=32
 CONFIG_KX134_WUFC=0
 CONFIG_KX134_BTSTH=32
-CONFIG_KX134_BTSC=0
+CONFIG_KX134_BTSC=4
 # CONFIG_KX134_TDTE_ODR_12HZ5 is not set
 # CONFIG_KX134_TDTE_ODR_25HZ is not set
 # CONFIG_KX134_TDTE_ODR_50HZ is not set
