--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 # SPDX-License-Identifier: Apache-2.0
 set(ZEPHYR_EXTRA_MODULES ${CMAKE_CURRENT_LIST_DIR}/drivers/kx134 ${CMAKE_CURRENT_LIST_DIR}/drivers/bm1422)
 list(APPEND BOARD_ROOT ${CMAKE_CURRENT_LIST_DIR})
-list(APPEND CONF_FILE ${CMAKE_CURRENT_LIST_DIR}/kx134.conf)
+list(APPEND CONF_FILE ${CMAKE_CURRENT_SOURCE_DIR}/prj.conf
+						${CMAKE_CURRENT_LIST_DIR}/kx134.conf)
 list(APPEND DTS_ROOT ${CMAKE_CURRENT_LIST_DIR}/drivers)
 list(APPEND DTC_OVERLAY_FILE ${CMAKE_CURRENT_LIST_DIR}/usb.overlay)
 
