Converted log file to Binary

--- a/datadisc.conf
+++ b/datadisc.conf
@@ -618,11 +618,7 @@ CONFIG_KX134_IIR_ODR_BY_9=y
 # CONFIG_KX134_IIR_ODR_BY_2 is not set
 CONFIG_KX134_INT1=y
 CONFIG_KX134_IEA1=y
-CONFIG_KX134_IEL1=y
-CONFIG_KX134_PW1_USEC=y
-# CONFIG_KX134_PW1_1XOSA is not set
-# CONFIG_KX134_PW1_2XOSA is not set
-# CONFIG_KX134_PW1_RTIME is not set
+# CONFIG_KX134_IEL1 is not set
 # CONFIG_KX134_ACLR1 is not set
 # CONFIG_KX134_FFI1 is not set
 # CONFIG_KX134_BFI1 is not set
@@ -634,11 +630,7 @@ CONFIG_KX134_DRDYI1=y
 # CONFIG_KX134_TPI1 is not set
 CONFIG_KX134_INT2=y
 CONFIG_KX134_IEA2=y
-CONFIG_KX134_IEL2=y
-CONFIG_KX134_PW2_USEC=y
-# CONFIG_KX134_PW2_1XOSA is not set
-# CONFIG_KX134_PW2_2XOSA is not set
-# CONFIG_KX134_PW2_RTIME is not set
+# CONFIG_KX134_IEL2 is not set
 # CONFIG_KX134_ACLR2 is not set
 # CONFIG_KX134_FFI2 is not set
 # CONFIG_KX134_BFI2 is not set
@@ -648,6 +640,8 @@ CONFIG_KX134_BTSI2=y
 CONFIG_KX134_TDTI2=y
 CONFIG_KX134_WUFI2=y
 # CONFIG_KX134_TPI2 is not set
+# CONFIG_KX134_AOI_OR is not set
+CONFIG_KX134_AOI_AND=y
 
 #
 # Motion Interrupt Sources
@@ -688,28 +682,28 @@ CONFIG_KX134_OBTS_ODR_0HZ781=y
 # CONFIG_KX134_OBTS_ODR_25HZ is not set
 # CONFIG_KX134_OBTS_ODR_50HZ is not set
 # CONFIG_KX134_OBTS_ODR_100HZ is not set
-# CONFIG_KX134_TH_MODE is not set
-CONFIG_KX134_WUFTH=32
+CONFIG_KX134_TH_MODE=y
+CONFIG_KX134_WUFTH=16
 CONFIG_KX134_WUFC=0
-CONFIG_KX134_BTSTH=32
-CONFIG_KX134_BTSC=0
-# CONFIG_KX134_TDTE_ODR_12HZ5 is not set
-# CONFIG_KX134_TDTE_ODR_25HZ is not set
-# CONFIG_KX134_TDTE_ODR_50HZ is not set
-CONFIG_KX134_TDTE_ODR_100HZ=y
-# CONFIG_KX134_TDTE_ODR_200HZ is not set
-# CONFIG_KX134_TDTE_ODR_400HZ is not set
-# CONFIG_KX134_TDTE_ODR_800HZ is not set
-# CONFIG_KX134_TDTE_ODR_1600HZ is not set
+CONFIG_KX134_BTSTH=8
+CONFIG_KX134_BTSC=10
+# CONFIG_KX134_OTDT_ODR_12HZ5 is not set
+# CONFIG_KX134_OTDT_ODR_25HZ is not set
+# CONFIG_KX134_OTDT_ODR_50HZ is not set
+# CONFIG_KX134_OTDT_ODR_100HZ is not set
+# CONFIG_KX134_OTDT_ODR_200HZ is not set
+CONFIG_KX134_OTDT_ODR_400HZ=y
+# CONFIG_KX134_OTDT_ODR_800HZ is not set
+# CONFIG_KX134_OTDT_ODR_1600HZ is not set
 CONFIG_KX134_DTRE=y
 # CONFIG_KX134_STRE is not set
-CONFIG_KX134_TDTC=120
+CONFIG_KX134_TDTC=108
 CONFIG_KX134_TTH=51
-CONFIG_KX134_TTL=7
+CONFIG_KX134_TTL=25
 CONFIG_KX134_FTD=162
 CONFIG_KX134_STD=36
 CONFIG_KX134_TLT=40
-CONFIG_KX134_TWS=160
+CONFIG_KX134_TWS=104
 # CONFIG_KX134_ADPE is not set
 # CONFIG_KX134_TRIGGER_NONE is not set
 # CONFIG_KX134_TRIGGER_GLOBAL_THREAD is not set
@@ -1011,7 +1005,7 @@ CONFIG_STACK_ALIGN_DOUBLE_WORD=y
 # CONFIG_RUNTIME_NMI is not set
 CONFIG_PLATFORM_SPECIFIC_INIT=y
 CONFIG_FAULT_DUMP=2
-# CONFIG_BUILTIN_STACK_GUARD is not set
+CONFIG_BUILTIN_STACK_GUARD=y
 CONFIG_ARM_STACK_PROTECTION=y
 CONFIG_FP16=y
 CONFIG_FP16_IEEE=y
@@ -1046,7 +1040,7 @@ CONFIG_ARM_TRUSTZONE_M=y
 CONFIG_GEN_IRQ_VECTOR_TABLE=y
 CONFIG_ARM_MPU=y
 CONFIG_ARM_MPU_REGION_MIN_ALIGN_AND_SIZE=32
-CONFIG_MPU_STACK_GUARD=y
+# CONFIG_MPU_STACK_GUARD is not set
 CONFIG_MPU_ALLOW_FLASH_WRITE=y
 # CONFIG_CUSTOM_SECTION_ALIGN is not set
 CONFIG_CUSTOM_SECTION_MIN_ALIGN_SIZE=32
@@ -1144,7 +1138,7 @@ CONFIG_PRIORITY_CEILING=-127
 # CONFIG_SCHED_DEADLINE is not set
 # CONFIG_SCHED_CPU_MASK is not set
 CONFIG_IDLE_STACK_SIZE=320
-CONFIG_ISR_STACK_SIZE=2048
+CONFIG_ISR_STACK_SIZE=4096
 CONFIG_THREAD_STACK_INFO=y
 # CONFIG_THREAD_CUSTOM_DATA is not set
 CONFIG_ERRNO=y
@@ -1162,7 +1156,9 @@ CONFIG_BOOT_DELAY=0
 CONFIG_THREAD_MONITOR=y
 CONFIG_THREAD_NAME=y
 CONFIG_THREAD_MAX_NAME_LEN=32
-# CONFIG_THREAD_RUNTIME_STATS is not set
+CONFIG_INSTRUMENT_THREAD_SWITCHING=y
+CONFIG_THREAD_RUNTIME_STATS=y
+# CONFIG_THREAD_RUNTIME_STATS_USE_TIMING_FUNCTIONS is not set
 # end of Kernel Debugging and Metrics
 
 #
@@ -1599,7 +1595,17 @@ CONFIG_FNMATCH=y
 #
 # System Monitoring Options
 #
-# CONFIG_THREAD_ANALYZER is not set
+CONFIG_THREAD_ANALYZER=y
+# CONFIG_THREAD_ANALYZER_LOG_LEVEL_OFF is not set
+# CONFIG_THREAD_ANALYZER_LOG_LEVEL_ERR is not set
+# CONFIG_THREAD_ANALYZER_LOG_LEVEL_WRN is not set
+CONFIG_THREAD_ANALYZER_LOG_LEVEL_INF=y
+# CONFIG_THREAD_ANALYZER_LOG_LEVEL_DBG is not set
+CONFIG_THREAD_ANALYZER_LOG_LEVEL=3
+CONFIG_THREAD_ANALYZER_USE_LOG=y
+# CONFIG_THREAD_ANALYZER_USE_PRINTK is not set
+CONFIG_THREAD_ANALYZER_RUN_UNLOCKED=y
+# CONFIG_THREAD_ANALYZER_AUTO is not set
 # end of System Monitoring Options
 
 #
@@ -1619,7 +1625,7 @@ CONFIG_ASSERT_VERBOSE=y
 # CONFIG_OVERRIDE_FRAME_POINTER_DEFAULT is not set
 # CONFIG_DEBUG_INFO is not set
 # CONFIG_OPENOCD_SUPPORT is not set
-# CONFIG_DEBUG_THREAD_INFO is not set
+CONFIG_DEBUG_THREAD_INFO=y
 # CONFIG_DEBUG_COREDUMP is not set
 # end of Debugging Options
 
@@ -1681,13 +1687,12 @@ CONFIG_FS_FATFS_MAX_SS=512
 
 # CONFIG_JWT is not set
 CONFIG_LOG=y
-# CONFIG_LOG_MODE_DEFERRED is not set
-CONFIG_LOG2_MODE_DEFERRED=y
+CONFIG_LOG_MODE_DEFERRED=y
+# CONFIG_LOG2_MODE_DEFERRED is not set
 # CONFIG_LOG2_MODE_IMMEDIATE is not set
 # CONFIG_LOG_MODE_IMMEDIATE is not set
 # CONFIG_LOG_MODE_MINIMAL is not set
 # CONFIG_LOG_FRONTEND is not set
-CONFIG_LOG2=y
 
 #
 # Logging levels filtering
@@ -1726,11 +1731,12 @@ CONFIG_LOG_PROCESS_TRIGGER_THRESHOLD=10
 CONFIG_LOG_PROCESS_THREAD=y
 CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=0
 CONFIG_LOG_PROCESS_THREAD_SLEEP_MS=1000
-CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=768
+CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=1024
 CONFIG_LOG_BUFFER_SIZE=1024
-CONFIG_LOG_TRACE_SHORT_TIMESTAMP=y
-# CONFIG_LOG_TIMESTAMP_64BIT is not set
-# CONFIG_LOG_SPEED is not set
+CONFIG_LOG_DETECT_MISSED_STRDUP=y
+CONFIG_LOG_STRDUP_MAX_STRING=32
+CONFIG_LOG_STRDUP_BUF_COUNT=4
+# CONFIG_LOG_STRDUP_POOL_PROFILING is not set
 # end of Processing
 
 #
