Re-enabled magnetometer

--- a/kx134.conf
+++ b/kx134.conf
@@ -1,5 +1,5 @@
 #
-# kx134
+# kx134 (C:UsersGriffinDesktopWorkspacedatadiscdriverskx134)
 #
 CONFIG_KX134=y
 # CONFIG_KX134_LOG_LEVEL_OFF is not set
@@ -30,10 +30,10 @@ CONFIG_KX134_RANGE_8G=y
 # CONFIG_KX134_OSA_6HZ25 is not set
 # CONFIG_KX134_OSA_12HZ5 is not set
 # CONFIG_KX134_OSA_25HZ is not set
-CONFIG_KX134_OSA_50HZ=y
+# CONFIG_KX134_OSA_50HZ is not set
 # CONFIG_KX134_OSA_100HZ is not set
 # CONFIG_KX134_OSA_200HZ is not set
-# CONFIG_KX134_OSA_400HZ is not set
+CONFIG_KX134_OSA_400HZ=y
 # CONFIG_KX134_OSA_800HZ is not set
 # CONFIG_KX134_OSA_1600HZ is not set
 # CONFIG_KX134_OSA_3200HZ is not set
@@ -44,11 +44,7 @@ CONFIG_KX134_IIR_ODR_BY_9=y
 # CONFIG_KX134_IIR_ODR_BY_2 is not set
 CONFIG_KX134_INT1=y
 CONFIG_KX134_IEA1=y
-CONFIG_KX134_IEL1=y
-CONFIG_KX134_PW1_USEC=y
-# CONFIG_KX134_PW1_1XOSA is not set
-# CONFIG_KX134_PW1_2XOSA is not set
-# CONFIG_KX134_PW1_RTIME is not set
+# CONFIG_KX134_IEL1 is not set
 # CONFIG_KX134_ACLR1 is not set
 # CONFIG_KX134_FFI1 is not set
 # CONFIG_KX134_BFI1 is not set
@@ -60,11 +56,7 @@ CONFIG_KX134_DRDYI1=y
 # CONFIG_KX134_TPI1 is not set
 CONFIG_KX134_INT2=y
 CONFIG_KX134_IEA2=y
-CONFIG_KX134_IEL2=y
-CONFIG_KX134_PW2_USEC=y
-# CONFIG_KX134_PW2_1XOSA is not set
-# CONFIG_KX134_PW2_2XOSA is not set
-# CONFIG_KX134_PW2_RTIME is not set
+# CONFIG_KX134_IEL2 is not set
 # CONFIG_KX134_ACLR2 is not set
 # CONFIG_KX134_FFI2 is not set
 # CONFIG_KX134_BFI2 is not set
@@ -72,8 +64,10 @@ CONFIG_KX134_PW2_USEC=y
 # CONFIG_KX134_DRDYI2 is not set
 CONFIG_KX134_BTSI2=y
 CONFIG_KX134_TDTI2=y
-CONFIG_KX134_WUFI2=n
+CONFIG_KX134_WUFI2=y
 # CONFIG_KX134_TPI2 is not set
+# CONFIG_KX134_AOI_OR is not set
+CONFIG_KX134_AOI_AND=y
 
 #
 # Motion Interrupt Sources
@@ -114,32 +108,32 @@ CONFIG_KX134_OBTS_ODR_0HZ781=y
 # CONFIG_KX134_OBTS_ODR_25HZ is not set
 # CONFIG_KX134_OBTS_ODR_50HZ is not set
 # CONFIG_KX134_OBTS_ODR_100HZ is not set
-# CONFIG_KX134_TH_MODE is not set
-CONFIG_KX134_WUFTH=32
+CONFIG_KX134_TH_MODE=y
+CONFIG_KX134_WUFTH=16
 CONFIG_KX134_WUFC=0
-CONFIG_KX134_BTSTH=32
-CONFIG_KX134_BTSC=4
-# CONFIG_KX134_TDTE_ODR_12HZ5 is not set
-# CONFIG_KX134_TDTE_ODR_25HZ is not set
-# CONFIG_KX134_TDTE_ODR_50HZ is not set
-CONFIG_KX134_TDTE_ODR_100HZ=y
-# CONFIG_KX134_TDTE_ODR_200HZ is not set
-# CONFIG_KX134_TDTE_ODR_400HZ is not set
-# CONFIG_KX134_TDTE_ODR_800HZ is not set
-# CONFIG_KX134_TDTE_ODR_1600HZ is not set
+CONFIG_KX134_BTSTH=8
+CONFIG_KX134_BTSC=10
+# CONFIG_KX134_OTDT_ODR_12HZ5 is not set
+# CONFIG_KX134_OTDT_ODR_25HZ is not set
+# CONFIG_KX134_OTDT_ODR_50HZ is not set
+CONFIG_KX134_OTDT_ODR_100HZ=y
+# CONFIG_KX134_OTDT_ODR_200HZ is not set
+# CONFIG_KX134_OTDT_ODR_400HZ=y
+# CONFIG_KX134_OTDT_ODR_800HZ is not set
+# CONFIG_KX134_OTDT_ODR_1600HZ is not set
 CONFIG_KX134_DTRE=y
 # CONFIG_KX134_STRE is not set
-CONFIG_KX134_TDTC=120
+CONFIG_KX134_TDTC=108
 CONFIG_KX134_TTH=51
-CONFIG_KX134_TTL=7
+CONFIG_KX134_TTL=25
 CONFIG_KX134_FTD=162
 CONFIG_KX134_STD=36
 CONFIG_KX134_TLT=40
-CONFIG_KX134_TWS=160
+CONFIG_KX134_TWS=104
 # CONFIG_KX134_ADPE is not set
 # CONFIG_KX134_TRIGGER_NONE is not set
 # CONFIG_KX134_TRIGGER_GLOBAL_THREAD is not set
 CONFIG_KX134_TRIGGER_OWN_THREAD=y
 CONFIG_KX134_THREAD_PRIORITY=10
 CONFIG_KX134_THREAD_STACK_SIZE=1024
-# end of kx134
+# end of kx134 (C:UsersGriffinDesktopWorkspacedatadiscdriverskx134)
