--- a/prj.conf
+++ b/prj.conf
@@ -1,4 +1,4 @@
-CONFIG_BOOTLOADER_MCUBOOT=y
+#CONFIG_BOOTLOADER_MCUBOOT=y
 
 # enable console
 CONFIG_USE_SEGGER_RTT=y
@@ -70,7 +70,8 @@ CONFIG_USB_CDC_ACM=y
 CONFIG_APP_MSC_STORAGE_FLASH_FATFS=y
 
 CONFIG_DISK_DRIVER_FLASH=y
-CONFIG_DISK_FLASH_DEV_NAME="AT25SL321"
+CONFIG_DISK_FLASH_DEV_NAME="MX25U32"
+#CONFIG_DISK_FLASH_DEV_NAME="AT25SL321"
 CONFIG_DISK_VOLUME_SIZE=0x00400000
 
 
@@ -92,6 +93,7 @@ CONFIG_SHELL_BACKEND_SERIAL_CHECK_DTR=y
 CONFIG_UART_LINE_CTRL=y
 CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=51
 
+CONFIG_REBOOT=y
 
 # Drivers
 CONFIG_SENSOR=y
