Changed naming convention of logs

--- a/kx134.conf
+++ b/kx134.conf
@@ -8,8 +8,8 @@ CONFIG_KX134=y
 CONFIG_KX134_LOG_LEVEL_INF=y
 # CONFIG_KX134_LOG_LEVEL_DBG is not set
 CONFIG_KX134_SPI=y
-CONFIG_KX134_LOW_POWER_MODE=y
-# CONFIG_KX134_HIGH_PERF_MODE is not set
+# CONFIG_KX134_LOW_POWER_MODE
+CONFIG_KX134_HIGH_PERF_MODE=y
 # CONFIG_KX134_AVC_NONE is not set
 # CONFIG_KX134_AVC_2SAMPLES is not set
 # CONFIG_KX134_AVC_4SAMPLES is not set
@@ -18,10 +18,10 @@ CONFIG_KX134_AVC_16SAMPLES=y
 # CONFIG_KX134_AVC_32SAMPLES is not set
 # CONFIG_KX134_AVC_64SAMPLES is not set
 # CONFIG_KX134_AVC_128SAMPLES is not set
-CONFIG_KX134_RANGE_8G=y
+# CONFIG_KX134_RANGE_8G
 # CONFIG_KX134_RANGE_16G is not set
 # CONFIG_KX134_RANGE_32G is not set
-# CONFIG_KX134_RANGE_64G is not set
+CONFIG_KX134_RANGE_64G=y
 # CONFIG_KX134_C_MODE is not set
 # CONFIG_KX134_PR_MODE is not set
 # CONFIG_KX134_OSA_0HZ781 is not set
@@ -33,9 +33,9 @@ CONFIG_KX134_RANGE_8G=y
 # CONFIG_KX134_OSA_50HZ is not set
 # CONFIG_KX134_OSA_100HZ is not set
 # CONFIG_KX134_OSA_200HZ is not set
-CONFIG_KX134_OSA_400HZ=y
+# CONFIG_KX134_OSA_400HZ is not set
 # CONFIG_KX134_OSA_800HZ is not set
-# CONFIG_KX134_OSA_1600HZ is not set
+CONFIG_KX134_OSA_1600HZ=y
 # CONFIG_KX134_OSA_3200HZ is not set
 # CONFIG_KX134_OSA_6400HZ is not set
 # CONFIG_KX134_OSA_12800HZ is not set
@@ -116,9 +116,9 @@ CONFIG_KX134_BTSC=10
 # CONFIG_KX134_OTDT_ODR_12HZ5 is not set
 # CONFIG_KX134_OTDT_ODR_25HZ is not set
 # CONFIG_KX134_OTDT_ODR_50HZ is not set
-CONFIG_KX134_OTDT_ODR_100HZ=y
+# CONFIG_KX134_OTDT_ODR_100HZ is not set
 # CONFIG_KX134_OTDT_ODR_200HZ is not set
-# CONFIG_KX134_OTDT_ODR_400HZ=y
+CONFIG_KX134_OTDT_ODR_400HZ=y
 # CONFIG_KX134_OTDT_ODR_800HZ is not set
 # CONFIG_KX134_OTDT_ODR_1600HZ is not set
 CONFIG_KX134_DTRE=y
