--- a/prj.conf
+++ b/prj.conf
@@ -6,7 +6,6 @@ CONFIG_RTT_CONSOLE=y
 CONFIG_UART_CONSOLE=n
 CONFIG_CONSOLE=n
 
-
 # logging
 CONFIG_LOG=y
 CONFIG_LOG_PRINTK=y
@@ -14,23 +13,19 @@ CONFIG_LOG_BACKEND_RTT=y
 CONFIG_LOG_DEFAULT_LEVEL=3
 CONFIG_EXTRA_EXCEPTION_INFO=y
 
+# Enable the UART driver
+CONFIG_UART_ASYNC_API=y
+CONFIG_NRFX_UARTE0=y
+CONFIG_SERIAL=y
 
 # Bluetooth
-#CONFIG_BT=y
-#CONFIG_BT_DEBUG_LOG=y
-#CONFIG_BT_SMP=y
-#CONFIG_BT_SIGNING=y
-#CONFIG_BT_PERIPHERAL=y
-#CONFIG_BT_DIS=y
-#CONFIG_BT_ATT_PREPARE_COUNT=5
-#CONFIG_BT_BAS=y
-#CONFIG_BT_PRIVACY=y
-#CONFIG_BT_DEVICE_NAME="DataDisc v2"
-#CONFIG_BT_DEVICE_APPEARANCE=833
-#CONFIG_BT_DEVICE_NAME_DYNAMIC=y
-#CONFIG_BT_DEVICE_NAME_MAX=65
-#CONFIG_BT_KEYS_OVERWRITE_OLDEST=y
-
+CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_DEVICE_NAME="DataDisc v2"
+CONFIG_BT_DEVICE_APPEARANCE=1345
+CONFIG_BT_MAX_CONN=2
+CONFIG_BT_MAX_PAIRED=2
+CONFIG_BT_BAS=y
 
 # File System
 # Optionally force the file system to be recreated
@@ -106,7 +101,5 @@ CONFIG_SPI=y
 CONFIG_I2C=y
 CONFIG_PWM=y
 CONFIG_ADC=y
-
-CONFIG_SERIAL=n
 
 CONFIG_NEWLIB_LIBC=y
