--- a/prj.conf
+++ b/prj.conf
@@ -26,6 +26,13 @@ CONFIG_BT_DEVICE_APPEARANCE=1345
 CONFIG_BT_MAX_CONN=2
 CONFIG_BT_MAX_PAIRED=2
 CONFIG_BT_BAS=y
+CONFIG_BT_OTS=y
+CONFIG_BT_OTS_DIR_LIST_OBJ=y
+CONFIG_BT_OTS_OBJ_NAME_WRITE_SUPPORT=y
+CONFIG_BT_OTS_OACP_WRITE_SUPPORT=y
+CONFIG_BT_OTS_OACP_PATCH_SUPPORT=y
+CONFIG_BT_OTS_OACP_CREATE_SUPPORT=y
+CONFIG_BT_OTS_OACP_DELETE_SUPPORT=y
 
 # File System
 # Optionally force the file system to be recreated
