--- a/prj.conf
+++ b/prj.conf
@@ -1,10 +1,18 @@
-#CONFIG_BOOTLOADER_MCUBOOT=y
+# Enable mcumgr.
+CONFIG_MCUMGR=y
+
+# Enable most core commands.
+CONFIG_MCUMGR_CMD_IMG_MGMT=y
+CONFIG_MCUMGR_CMD_OS_MGMT=y
+
+# Ensure an MCUboot-compatible binary is generated.
+CONFIG_BOOTLOADER_MCUBOOT=y
 
 # enable console
 CONFIG_USE_SEGGER_RTT=y
 CONFIG_RTT_CONSOLE=y
 CONFIG_UART_CONSOLE=n
-CONFIG_CONSOLE=n
+CONFIG_CONSOLE=y
 
 # logging
 CONFIG_LOG=y
@@ -34,6 +42,17 @@ CONFIG_BT_OTS_OACP_PATCH_SUPPORT=y
 CONFIG_BT_OTS_OACP_CREATE_SUPPORT=y
 CONFIG_BT_OTS_OACP_DELETE_SUPPORT=y
 
+# Allow for large Bluetooth data packets.
+CONFIG_BT_L2CAP_TX_MTU=252
+CONFIG_BT_BUF_ACL_RX_SIZE=256
+
+# Enable the Bluetooth (unauthenticated) and shell mcumgr transports.
+CONFIG_MCUMGR_SMP_BT=y
+CONFIG_MCUMGR_SMP_BT_AUTHEN=n
+
+# Some command handlers require a large stack.
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
+
 # File System
 # Optionally force the file system to be recreated
 #CONFIG_APP_WIPE_STORAGE=y
@@ -56,7 +75,7 @@ CONFIG_PM_EXTERNAL_FLASH_BASE=0x0
 
 CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
-CONFIG_FS_FATFS_EXFAT=y
+#CONFIG_FS_FATFS_EXFAT=y
 
 #CONFIG_MPU_ALLOW_FLASH_WRITE=y
 
