Starting to migrate to 2.0.0

--- a/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common.dts
+++ b/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common.dts
@@ -72,10 +72,15 @@
 &i2c1 {
 	compatible = "nordic,nrf-twim";
 	status = "okay";
-	
+	pinctrl-0 = <&i2c1_default>;
+	pinctrl-1 = <&i2c1_sleep>;
+	pinctrl-names = "default", "sleep";
+
+	/* 
 	clock-frequency = <400000>;
 	sda-pin = <35>;
 	scl-pin = <34>;
+	*/
 	
 	bm1422agmv@e {
 		compatible = "rohm,bm1422agmv";
@@ -88,10 +93,14 @@
 &i2c3 {
 	compatible = "nordic,nrf-twim";
 	status = "okay";
+	pinctrl-0 = <&i2c3_default>;
+	pinctrl-1 = <&i2c3_sleep>;
+	pinctrl-names = "default", "sleep";
 	
-	clock-frequency = <400000>;
+	/* clock-frequency = <400000>;
 	sda-pin = <47>;
 	scl-pin = <46>;
+	*/
 	
 	ch201-prog@45 {
 		compatible = "tdk,ch201";
@@ -110,10 +119,20 @@
 
 &pwm0 {
 	status = "okay";
-	ch0-pin = <31>;
+	pinctrl-0 = <&pwm0_default>;
+	pinctrl-1 = <&pwm0_sleep>;
+	pinctrl-names = "default", "sleep";
+	/* ch0-pin = <31>; */
 };
 
 &uart0 {
+	status = "okay";
+	current-speed = <115200>;
+	pinctrl-0 = <&uart0_default>;
+	pinctrl-1 = <&uart0_sleep>;
+	pinctrl-names = "default", "sleep";
+	
+	/*
 	compatible = "nordic,nrf-uarte";
 	status = "okay";
 	current-speed = <115200>;
@@ -123,6 +142,7 @@
 	rts-pin = <19>;
 	cts-pin = <21>;
 	cts-pull-up;
+	*/
 };
 
 &uart1 {
@@ -136,11 +156,18 @@
 &spi2 {
 	compatible = "nordic,nrf-spim";
 	status = "okay";
+	cs-gpios = <&gpio0 10 GPIO_ACTIVE_LOW>;
+	pinctrl-0 = <&spi2_default>;
+	pinctrl-1 = <&spi2_sleep>;
+	pinctrl-names = "default", "sleep";
+
+	/*
 	sck-pin = <7>;
 	miso-pin = <8>;
 	mosi-pin = <9>;
 	cs-gpios = <&gpio0 10 GPIO_ACTIVE_LOW>;
 	miso-pull-down;
+	*/
 	
 	kx134alpha: kx134-1211@0 {
 		compatible = "kionix,kx134-1211";
@@ -156,11 +183,18 @@
 &spi4 {
 	compatible = "nordic,nrf-spim";
 	status = "okay";
+	cs-gpios = <&gpio1 10 GPIO_ACTIVE_LOW>;
+	pinctrl-0 = <&spi4_default>;
+	pinctrl-1 = <&spi4_sleep>;
+	pinctrl-names = "default", "sleep";
+
+	/*
 	sck-pin = <39>;
 	miso-pin = <40>;
 	mosi-pin = <41>;
 	cs-gpios = <&gpio1 10 GPIO_ACTIVE_LOW>;
 	miso-pull-down;
+	*/
 	
 	kx134beta: kx134-1211@0 {
 		compatible = "kionix,kx134-1211";
@@ -175,9 +209,16 @@
 
 &qspi {
 	status = "okay";
+	pinctrl-0 = <&qspi_default>;
+	pinctrl-1 = <&qspi_sleep>;
+	pinctrl-names = "default", "sleep";
+	
+	/*
 	sck-pin = <17>;
 	io-pins = <13>, <14>, <15>, <16>;
 	csn-pins = <18>;
+	*/
+
 	mx25u32: mx25u3232f@0 {
 		compatible = "nordic,qspi-nor";
 		reg = <0>;
