--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,16 @@
+#
+# Copyright (c) 2020-2022 Griffin Adams
+#
 # SPDX-License-Identifier: Apache-2.0
+#
+
 set(ZEPHYR_EXTRA_MODULES ${CMAKE_CURRENT_LIST_DIR}/drivers/kx134 ${CMAKE_CURRENT_LIST_DIR}/drivers/bm1422)
-list(APPEND BOARD_ROOT ${CMAKE_CURRENT_LIST_DIR})
-list(APPEND CONF_FILE ${CMAKE_CURRENT_LIST_DIR}/prj.conf
-						${CMAKE_CURRENT_LIST_DIR}/kx134.conf
-						${CMAKE_CURRENT_LIST_DIR}/bm1422.conf)
-list(APPEND DTS_ROOT ${CMAKE_CURRENT_LIST_DIR}/drivers)
-list(APPEND DTC_OVERLAY_FILE ${CMAKE_CURRENT_LIST_DIR}/usb.overlay)
+set(BOARD_ROOT ${CMAKE_CURRENT_LIST_DIR})
+set(CONF_FILE ${CMAKE_CURRENT_LIST_DIR}/prj.conf)
+list(APPEND CONF_FILE ${CMAKE_CURRENT_LIST_DIR}/kx134.conf)
+list(APPEND CONF_FILE ${CMAKE_CURRENT_LIST_DIR}/bm1422.conf)
+set(DTS_ROOT ${CMAKE_CURRENT_LIST_DIR}/drivers)
+set(DTC_OVERLAY_FILE ${CMAKE_CURRENT_LIST_DIR}/usb.overlay)
 						#${CMAKE_CURRENT_LIST_DIR}/qspi.overlay)
 
 cmake_minimum_required(VERSION 3.20.0)
