--- a/boards/arm/datadisc_nrf5340/datadisc_nrf5340_cpuapp_defconfig
+++ b/boards/arm/datadisc_nrf5340/datadisc_nrf5340_cpuapp_defconfig
@@ -19,3 +19,6 @@ CONFIG_SOC_LFXO_CAP_INT_6PF=y
 
 CONFIG_SOC_HFXO_CAP_INTERNAL=y
 CONFIG_SOC_HFXO_CAP_INT_VALUE_X2=32
+
+# configure pin control
+CONFIG_PINCTRL=y
