--- a/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common.dts
+++ b/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common.dts
@@ -3,6 +3,7 @@
  *
  * SPDX-License-Identifier: Apache-2.0
  */
+ #include "nrf5340_cpuapp_common-pinctrl.dtsi"
 
 / {
 	chosen {
@@ -25,7 +26,7 @@
 	pwmdevs {
 		compatible = "pwm-leds";
 		my_pwm: pwm_device_0 {
-			pwms = < &pwm0 31 >;
+			pwms = <&pwm0 31 PWM_MSEC(20) PWM_POLARITY_INVERTED>;
 			label = "PWM LED";
 		};
 	};
@@ -96,11 +97,6 @@
 	pinctrl-0 = <&i2c3_default>;
 	pinctrl-1 = <&i2c3_sleep>;
 	pinctrl-names = "default", "sleep";
-	
-	/* clock-frequency = <400000>;
-	sda-pin = <47>;
-	scl-pin = <46>;
-	*/
 	
 	ch201-prog@45 {
 		compatible = "tdk,ch201";
