--- a/boards/arm/datadisc_nrf5340/Kconfig
+++ b/boards/arm/datadisc_nrf5340/Kconfig
@@ -1,42 +1,7 @@
 # nRF5340 DataDisc v2 board configuration
 
+# Copyright (c) 2020-2022 Griffin Adams
 # SPDX-License-Identifier: Apache-2.0
-
-config IPM_NRFX
-	default IPM
-
-config RPMSG_SERVICE_DUAL_IPM_SUPPORT
-	default RPMSG_SERVICE
-
-if RPMSG_SERVICE_DUAL_IPM_SUPPORT
-
-config IPM_MSG_CH_0_ENABLE
-	default y
-
-config IPM_MSG_CH_1_ENABLE
-	default y
-
-config RPMSG_SERVICE_IPM_TX_NAME
-	default "IPM_0" if RPMSG_SERVICE_MODE_MASTER
-	default "IPM_1" if RPMSG_SERVICE_MODE_REMOTE
-
-config RPMSG_SERVICE_IPM_RX_NAME
-	default "IPM_1" if RPMSG_SERVICE_MODE_MASTER
-	default "IPM_0" if RPMSG_SERVICE_MODE_REMOTE
-
-config IPM_MSG_CH_0_TX
-	default RPMSG_SERVICE_MODE_MASTER
-
-config IPM_MSG_CH_0_RX
-	default RPMSG_SERVICE_MODE_REMOTE
-
-config IPM_MSG_CH_1_TX
-	default RPMSG_SERVICE_MODE_REMOTE
-
-config IPM_MSG_CH_1_RX
-	default RPMSG_SERVICE_MODE_MASTER
-
-endif # RPMSG_SERVICE_DUAL_IPM_SUPPORT
 
 if BOARD_DATADISC_NRF5340_CPUAPP || BOARD_DATADISC_NRF5340_CPUAPPNS
 
@@ -55,16 +20,6 @@ config BOARD_ENABLE_DCDC_HV
 	select SOC_DCDC_NRF53X_HV
 	default n
 
-choice BT_HCI_BUS_TYPE
-	default BT_RPMSG if BT
-endchoice
-
-config HEAP_MEM_POOL_SIZE
-	default 4096 if BT_RPMSG
-
-config BT_HAS_HCI_VS
-	default y if BT
-
 config BOARD_ENABLE_CPUNET
 	bool "Enable nRF53 Network MCU"
 	help
@@ -81,7 +36,7 @@ config BOARD_ENABLE_CPUNET
 
 config DOMAIN_CPUNET_BOARD
 	string
-	default "datadisc_nrf5340_cpunet" if BOARD_DATADISC_NRF5340_CPUAPP || BOARD_DATADISC_NRF5340_CPUAPPNS
+	default "datadisc_nrf5340_cpunet"
 	depends on BOARD_ENABLE_CPUNET
 	help
 	  The board which will be used for CPUNET domain when creating a multi
@@ -91,22 +46,11 @@ config DOMAIN_CPUNET_BOARD
 
 endif # BOARD_DATADISC_NRF5340_CPUAPP || BOARD_DATADISC_NRF5340_CPUAPPNS
 
-if BOARD_DATADISC_NRF5340_CPUNET
-
-# BT_CTLR depends on BT. When BT is enabled we should default to also
-# enabling the controller.
-config BT_CTLR
-	default y if BT
-
-config BT_ECC
-	default y if BT
-
 config DOMAIN_CPUAPP_BOARD
 	string
-	default "datadisc_nrf5340_cpuapp" if BOARD_NRF5340PDK_NRF5340_CPUNET
+	default "datadisc_nrf5340_cpuapp"
+	depends on BOARD_DATADISC_NRF5340_CPUNET
 	help
 	  The board which will be used for CPUAPP domain when creating a multi
 	  image application where one or more images should be located on
 	  another board.
-
-endif # BOARD_DATADISC_NRF5340_CPUNET
