--- a/prj.conf
+++ b/prj.conf
@@ -1,12 +1,12 @@
 # Enable mcumgr.
-CONFIG_MCUMGR=y
+#CONFIG_MCUMGR=y
 
 # Enable most core commands.
-CONFIG_MCUMGR_CMD_IMG_MGMT=y
-CONFIG_MCUMGR_CMD_OS_MGMT=y
+#CONFIG_MCUMGR_CMD_IMG_MGMT=y
+#CONFIG_MCUMGR_CMD_OS_MGMT=y
 
 # Ensure an MCUboot-compatible binary is generated.
-CONFIG_BOOTLOADER_MCUBOOT=y
+#CONFIG_BOOTLOADER_MCUBOOT=y
 
 # enable console
 CONFIG_USE_SEGGER_RTT=y
@@ -33,22 +33,15 @@ CONFIG_BT_DEVICE_NAME="DataDisc v2"
 CONFIG_BT_DEVICE_APPEARANCE=1345
 CONFIG_BT_MAX_CONN=2
 CONFIG_BT_MAX_PAIRED=2
-CONFIG_BT_BAS=y
-CONFIG_BT_OTS=y
-CONFIG_BT_OTS_DIR_LIST_OBJ=y
-CONFIG_BT_OTS_OBJ_NAME_WRITE_SUPPORT=y
-CONFIG_BT_OTS_OACP_WRITE_SUPPORT=y
-CONFIG_BT_OTS_OACP_PATCH_SUPPORT=y
-CONFIG_BT_OTS_OACP_CREATE_SUPPORT=y
-CONFIG_BT_OTS_OACP_DELETE_SUPPORT=y
+CONFIG_BT_BAS_CLIENT=y
 
 # Allow for large Bluetooth data packets.
 CONFIG_BT_L2CAP_TX_MTU=252
 CONFIG_BT_BUF_ACL_RX_SIZE=256
 
 # Enable the Bluetooth (unauthenticated) and shell mcumgr transports.
-CONFIG_MCUMGR_SMP_BT=y
-CONFIG_MCUMGR_SMP_BT_AUTHEN=n
+#CONFIG_MCUMGR_SMP_BT=y
+#CONFIG_MCUMGR_SMP_BT_AUTHEN=n
 
 # Some command handlers require a large stack.
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
@@ -88,7 +81,7 @@ CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
 CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
 CONFIG_USB_CDC_ACM=y
 
-CONFIG_APP_MSC_STORAGE_FLASH_FATFS=y
+#CONFIG_APP_MSC_STORAGE_FLASH_FATFS=y
 
 CONFIG_DISK_DRIVER_FLASH=y
 CONFIG_DISK_FLASH_DEV_NAME="MX25U32"
