--- a/prj.conf
+++ b/prj.conf
@@ -30,14 +30,14 @@ CONFIG_SERIAL=y
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="DataDisc v2"
-CONFIG_BT_DEVICE_APPEARANCE=1345
-CONFIG_BT_MAX_CONN=2
-CONFIG_BT_MAX_PAIRED=2
+#CONFIG_BT_DEVICE_APPEARANCE=1345
+#CONFIG_BT_MAX_CONN=2
+#CONFIG_BT_MAX_PAIRED=2
 CONFIG_BT_BAS_CLIENT=y
 
 # Allow for large Bluetooth data packets.
-CONFIG_BT_L2CAP_TX_MTU=252
-CONFIG_BT_BUF_ACL_RX_SIZE=256
+#CONFIG_BT_L2CAP_TX_MTU=252
+#CONFIG_BT_BUF_ACL_RX_SIZE=256
 
 # Enable the Bluetooth (unauthenticated) and shell mcumgr transports.
 #CONFIG_MCUMGR_SMP_BT=y
