--- a/drivers/ch201/CMakeLists.txt
+++ b/drivers/ch201/CMakeLists.txt
@@ -1,11 +1,12 @@
 #
-#  Copyright (c) 2021 Griffin Adams
+#  Copyright (c) 2021-2022 Griffin Adams
 #
 #  SPDX-License-Identifier: Apache-2.0
 #
 
-zephyr_include_directories(.)
+cmake_minimum_required(VERSION 3.20.4)
 
-zephyr_library()
-zephyr_library_sources_ifdef(CONFIG_CH201 ch201.c)
-zephyr_library_sources_ifdef(CONFIG_CH201_TRIGGER ch201_trigger.c)
+if(CONFIG_CH201)
+include_directories(.)
+target_sources(app PRIVATE ch201.c ch201_trigger.c)
+endif()
