--- a/kx134.conf
+++ b/kx134.conf
@@ -110,7 +110,7 @@ CONFIG_KX134_OBTS_ODR_0HZ781=y
 # CONFIG_KX134_OBTS_ODR_100HZ is not set
 CONFIG_KX134_TH_MODE=y
 CONFIG_KX134_WUFTH=16
-CONFIG_KX134_WUFC=0
+#CONFIG_KX134_WUFC=0
 CONFIG_KX134_BTSTH=8
 CONFIG_KX134_BTSC=10
 # CONFIG_KX134_OTDT_ODR_12HZ5 is not set
@@ -134,6 +134,6 @@ CONFIG_KX134_TWS=104
 # CONFIG_KX134_TRIGGER_NONE is not set
 # CONFIG_KX134_TRIGGER_GLOBAL_THREAD is not set
 CONFIG_KX134_TRIGGER_OWN_THREAD=y
-CONFIG_KX134_THREAD_PRIORITY=10
-CONFIG_KX134_THREAD_STACK_SIZE=1024
+#CONFIG_KX134_THREAD_PRIORITY=10
+#CONFIG_KX134_THREAD_STACK_SIZE=1024
 # end of kx134 (C:UsersGriffinDesktopWorkspacedatadiscdriverskx134)
