--- a/prj.conf
+++ b/prj.conf
@@ -9,16 +9,15 @@
 #CONFIG_BOOTLOADER_MCUBOOT=y
 
 # enable console
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_RTT_CONSOLE=y
-CONFIG_UART_CONSOLE=n
+#CONFIG_USE_SEGGER_RTT=y
+#CONFIG_RTT_CONSOLE=y
+#CONFIG_UART_CONSOLE=n
 CONFIG_CONSOLE=y
 
 # logging
 CONFIG_LOG=y
 CONFIG_LOG_PRINTK=y
-CONFIG_LOG_BACKEND_RTT=y
-CONFIG_LOG_DEFAULT_LEVEL=3
+#CONFIG_LOG_BACKEND_RTT=y
 CONFIG_EXTRA_EXCEPTION_INFO=y
 
 # Enable the UART driver
@@ -30,9 +29,9 @@ CONFIG_SERIAL=y
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="DataDisc v2"
-#CONFIG_BT_DEVICE_APPEARANCE=1345
-#CONFIG_BT_MAX_CONN=2
-#CONFIG_BT_MAX_PAIRED=2
+CONFIG_BT_DEVICE_APPEARANCE=1345
+CONFIG_BT_MAX_CONN=2
+CONFIG_BT_MAX_PAIRED=2
 CONFIG_BT_BAS_CLIENT=y
 
 # Allow for large Bluetooth data packets.
@@ -90,11 +89,11 @@ CONFIG_DISK_VOLUME_SIZE=0x00400000
 
 
 # Shell
-CONFIG_PRINTK=y
-CONFIG_SHELL=y
+#CONFIG_PRINTK=y
+#CONFIG_SHELL=y
 #CONFIG_SHELL_MINIMAL=y
 #CONFIG_SHELL_STACK_SIZE=1024
-CONFIG_SHELL_BACKEND_SERIAL=y
+#CONFIG_SHELL_BACKEND_SERIAL=y
 
 #CONFIG_THREAD_MONITOR=y
 #CONFIG_INIT_STACKS=y
@@ -103,15 +102,14 @@ CONFIG_SHELL_BACKEND_SERIAL=y
 #CONFIG_LOG=n
 #CONFIG_CBPRINTF_NANO=y
 
-CONFIG_SHELL_BACKEND_SERIAL_CHECK_DTR=y
-CONFIG_UART_LINE_CTRL=y
-CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=51
+#CONFIG_SHELL_BACKEND_SERIAL_CHECK_DTR=y
+#CONFIG_UART_LINE_CTRL=y
+#CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=51
 
 CONFIG_REBOOT=y
 
 # Drivers
 CONFIG_SENSOR=y
-CONFIG_KX134=y
 
 CONFIG_GPIO=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
