--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
     "nrf-connect.applications": [
         "${workspaceFolder}"
     ],
-    "nrf-connect.topdir": "${nrf-connect.sdk:2.0.0}",
-    "nrf-connect.toolchain.path": "${nrf-connect.toolchain:2.0.0}",
     "files.associations": {
         "bas.h": "c",
         "bas_client.h": "c"
-    }
+    },
+    "nrf-connect.enableTelemetry": true,
+    "nrf-connect.kconfig.interface": "kconfig",
+    "nrf-connect.topdir": "${nrf-connect.sdk:2.0.0}",
+    "nrf-connect.toolchain.path": "${nrf-connect.toolchain:2.0.0}"
 }
