--- a/bm1422.conf
+++ b/bm1422.conf
@@ -1,6 +1,7 @@
-#
-# bm1422 (C:/Users/Griffin/Desktop/Workspace/datadisc/drivers/bm1422)
-#
+# 
+# bm1422 (C:/Users/Griffin/Desktop/Workspace/datadisc/drivers/bm1422) 
+# 
+
 CONFIG_BM1422=y
 # CONFIG_BM1422_LOG_LEVEL_OFF is not set
 # CONFIG_BM1422_LOG_LEVEL_ERR is not set
@@ -23,6 +24,6 @@ CONFIG_BM1422_DRP=y
 # CONFIG_BM1422_TRIGGER_NONE is not set
 # CONFIG_BM1422_TRIGGER_GLOBAL_THREAD is not set
 CONFIG_BM1422_TRIGGER_OWN_THREAD=y
-CONFIG_BM1422_THREAD_PRIORITY=10
-CONFIG_BM1422_THREAD_STACK_SIZE=1024
+#CONFIG_BM1422_THREAD_PRIORITY=10
+#CONFIG_BM1422_THREAD_STACK_SIZE=1024
 # end of bm1422 (C:/Users/Griffin/Desktop/Workspace/datadisc/drivers/bm1422)
