--- a/drivers/bm1422/CMakeLists.txt
+++ b/drivers/bm1422/CMakeLists.txt
@@ -1,11 +1,12 @@
 #
-#  Copyright (c) 2021 Griffin Adams
+#  Copyright (c) 2021-2022 Griffin Adams
 #
 #  SPDX-License-Identifier: Apache-2.0
 #
 
-zephyr_include_directories(.)
+cmake_minimum_required(VERSION 3.20.4)
 
-zephyr_library()
-zephyr_library_sources_ifdef(CONFIG_BM1422 bm1422.c)
-zephyr_library_sources_ifdef(CONFIG_BM1422_TRIGGER bm1422_trigger.c)
+if(CONFIG_CH201)
+include_directories(.)
+target_sources(app PRIVATE bm1422.c bm1422_trigger.c)
+endif()
