--- a/drivers/kx134/zephyr/module.yml
+++ b/drivers/kx134/zephyr/module.yml
@@ -2,7 +2,7 @@
 # Copyright (c) 2019 Nordic Semiconductor
 
 build:
-  cmake: .
-  kconfig: Kconfig
+  cmake: zephyr
+  kconfig: zephyr/Kconfig
   settings:
     dts_root: .
