--- a/prj.conf
+++ b/prj.conf
@@ -32,7 +32,7 @@ CONFIG_BT_DEVICE_NAME="DataDisc v2"
 CONFIG_BT_DEVICE_APPEARANCE=1345
 CONFIG_BT_MAX_CONN=2
 CONFIG_BT_MAX_PAIRED=2
-CONFIG_BT_BAS_CLIENT=y
+CONFIG_BT_BAS=y
 
 # Allow for large Bluetooth data packets.
 #CONFIG_BT_L2CAP_TX_MTU=252
@@ -67,6 +67,12 @@ CONFIG_PM_EXTERNAL_FLASH_BASE=0x0
 
 CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
+CONFIG_DISK_ACCESS=y
+
+
+
+CONFIG_PRINTK=y
+
 #CONFIG_FS_FATFS_EXFAT=y
 
 #CONFIG_MPU_ALLOW_FLASH_WRITE=y
@@ -90,21 +96,21 @@ CONFIG_DISK_VOLUME_SIZE=0x00400000
 
 # Shell
 #CONFIG_PRINTK=y
-#CONFIG_SHELL=y
+CONFIG_SHELL=y
 #CONFIG_SHELL_MINIMAL=y
-#CONFIG_SHELL_STACK_SIZE=1024
-#CONFIG_SHELL_BACKEND_SERIAL=y
+CONFIG_SHELL_STACK_SIZE=1024
+CONFIG_SHELL_BACKEND_SERIAL=y
 
-#CONFIG_THREAD_MONITOR=y
-#CONFIG_INIT_STACKS=y
-#CONFIG_BOOT_BANNER=n
-#CONFIG_THREAD_NAME=y
+CONFIG_THREAD_MONITOR=y
+CONFIG_INIT_STACKS=y
+CONFIG_BOOT_BANNER=n
+CONFIG_THREAD_NAME=y
 #CONFIG_LOG=n
 #CONFIG_CBPRINTF_NANO=y
 
-#CONFIG_SHELL_BACKEND_SERIAL_CHECK_DTR=y
-#CONFIG_UART_LINE_CTRL=y
-#CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=51
+CONFIG_SHELL_BACKEND_SERIAL_CHECK_DTR=y
+CONFIG_UART_LINE_CTRL=y
+CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=51
 
 CONFIG_REBOOT=y
 
