--- a/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common.dts
+++ b/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common.dts
@@ -14,20 +14,11 @@
 		zephyr,bt-c2h-uart = &uart0;
 		nordic,pm-ext-flash = &mx25u32;
 	};
-
-	leds {
-		compatible = "gpio-leds";
-		led0: led_0 {
-			gpios = <&gpio0 31 GPIO_PULL_DOWN>;
-			label = "Blue LED";
-		};
-	};
 	
-	pwmdevs {
+	pwmleds {
 		compatible = "pwm-leds";
-		my_pwm: pwm_device_0 {
-			pwms = <&pwm0 31 PWM_MSEC(20) PWM_POLARITY_INVERTED>;
-			label = "PWM LED";
+		pwm_led0: pwm_led_0 {
+			pwms = <&pwm0 0 PWM_MSEC(20) PWM_POLARITY_NORMAL>;
 		};
 	};
 	
@@ -41,8 +32,7 @@
 	
 	/* These aliases are provided for compatibility with samples */
 	aliases {
-		led0 = &led0;
-		pwm-led0 = &my_pwm;
+		pwm-led0 = &pwm_led0;
 	};
 	
 	vbatt {
@@ -118,7 +108,6 @@
 	pinctrl-0 = <&pwm0_default>;
 	pinctrl-1 = <&pwm0_sleep>;
 	pinctrl-names = "default", "sleep";
-	/* ch0-pin = <31>; */
 };
 
 &uart0 {
