--- a/prj.conf
+++ b/prj.conf
@@ -9,15 +9,15 @@
 #CONFIG_BOOTLOADER_MCUBOOT=y
 
 # enable console
-#CONFIG_USE_SEGGER_RTT=y
-#CONFIG_RTT_CONSOLE=y
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=y
 #CONFIG_UART_CONSOLE=n
 CONFIG_CONSOLE=y
 
 # logging
 CONFIG_LOG=y
 CONFIG_LOG_PRINTK=y
-#CONFIG_LOG_BACKEND_RTT=y
+CONFIG_LOG_BACKEND_RTT=y
 CONFIG_EXTRA_EXCEPTION_INFO=y
 
 # Enable the UART driver
@@ -27,12 +27,17 @@ CONFIG_SERIAL=y
 
 # Bluetooth
 CONFIG_BT=y
+CONFIG_BT_SMP=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="DataDisc v2"
 CONFIG_BT_DEVICE_APPEARANCE=1345
 CONFIG_BT_MAX_CONN=2
 CONFIG_BT_MAX_PAIRED=2
 CONFIG_BT_BAS=y
+
+# Enable the BT NUS shell
+CONFIG_SHELL_BT_NUS=y
+CONFIG_SHELL_BT_NUS_LOG_LEVEL_DBG=y
 
 # Allow for large Bluetooth data packets.
 #CONFIG_BT_L2CAP_TX_MTU=252
