--- a/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common-pinctrl.dtsi
+++ b/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common-pinctrl.dtsi
@@ -6,15 +6,15 @@
 &pinctrl {
 	i2c1_default: i2c1_default {
 		group1 {
-			psels = <NRF_PSEL(TWIM_SDA, 1, 2)>,
-				<NRF_PSEL(TWIM_SCL, 1, 3)>;
+			psels = <NRF_PSEL(TWIM_SDA, 1, 3)>,
+				<NRF_PSEL(TWIM_SCL, 1, 2)>;
 		};
 	};
 
 	i2c1_sleep: i2c1_sleep {
 		group1 {
-			psels = <NRF_PSEL(TWIM_SDA, 1, 2)>,
-				<NRF_PSEL(TWIM_SCL, 1, 3)>;
+			psels = <NRF_PSEL(TWIM_SDA, 1, 3)>,
+				<NRF_PSEL(TWIM_SCL, 1, 2)>;
 			low-power-enable;
 		};
 	};
@@ -95,20 +95,20 @@
 	spi2_default: spi2_default {
 		group1 {
 			psels = <NRF_PSEL(SPIM_SCK, 0, 7)>,
-				<NRF_PSEL(SPIM_MOSI, 0, 9)>;
-		};
-		group2 {
-			psels = <NRF_PSEL(SPIM_MISO, 0, 8)>;
-			bias-pull-down;
+				<NRF_PSEL(SPIM_MOSI, 0, 8)>,
+				<NRF_PSEL(SPIM_MISO, 0, 9)>;
 		};
 	};
 
 	spi2_sleep: spi2_sleep {
 		group1 {
 			psels = <NRF_PSEL(SPIM_SCK, 0, 7)>,
-				<NRF_PSEL(SPIM_MISO, 0, 8)>,
 				<NRF_PSEL(SPIM_MOSI, 0, 9)>;
 			low-power-enable;
+		};
+		group2 {
+			psels = <NRF_PSEL(SPIM_MISO, 0, 8)>;
+			bias-pull-down;
 		};
 	};
 
@@ -126,8 +126,8 @@
 	spi4_sleep: spi4_sleep {
 		group1 {
 			psels = <NRF_PSEL(SPIM_SCK, 1, 7)>,
-				<NRF_PSEL(SPIM_MISO, 1, 8)>,
-				<NRF_PSEL(SPIM_MOSI, 1, 9)>;
+				<NRF_PSEL(SPIM_MISO, 1, 9)>,
+				<NRF_PSEL(SPIM_MOSI, 1, 8)>;
 			low-power-enable;
 		};
 	};
