--- a/prj.conf
+++ b/prj.conf
@@ -52,7 +52,7 @@ CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 
 # File System
 # Optionally force the file system to be recreated
-#CONFIG_APP_WIPE_STORAGE=y
+CONFIG_APP_WIPE_STORAGE=y
 
 # fs_dirent structures are big.
 CONFIG_MAIN_STACK_SIZE=2048
@@ -72,6 +72,7 @@ CONFIG_PM_EXTERNAL_FLASH_BASE=0x0
 
 CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
+CONFIG_APP_MSC_STORAGE_FLASH_FATFS=y
 CONFIG_DISK_ACCESS=y
 
 
@@ -91,13 +92,10 @@ CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
 CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
 CONFIG_USB_CDC_ACM=y
 
-#CONFIG_APP_MSC_STORAGE_FLASH_FATFS=y
-
 CONFIG_DISK_DRIVER_FLASH=y
 CONFIG_DISK_FLASH_DEV_NAME="MX25U32"
 #CONFIG_DISK_FLASH_DEV_NAME="AT25SL321"
 CONFIG_DISK_VOLUME_SIZE=0x00400000
-
 
 # Shell
 #CONFIG_PRINTK=y
