Fixed a mistake preventing ACCL ALPHA comms

--- a/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common-pinctrl.dtsi
+++ b/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common-pinctrl.dtsi
@@ -95,20 +95,20 @@
 	spi2_default: spi2_default {
 		group1 {
 			psels = <NRF_PSEL(SPIM_SCK, 0, 7)>,
-				<NRF_PSEL(SPIM_MOSI, 0, 8)>,
-				<NRF_PSEL(SPIM_MISO, 0, 9)>;
+				<NRF_PSEL(SPIM_MOSI, 0, 9)>;
+		};
+		group2 {
+			psels = <NRF_PSEL(SPIM_MISO, 0, 8)>;
+			bias-pull-down;
 		};
 	};
 
 	spi2_sleep: spi2_sleep {
 		group1 {
 			psels = <NRF_PSEL(SPIM_SCK, 0, 7)>,
-				<NRF_PSEL(SPIM_MOSI, 0, 9)>;
+				<NRF_PSEL(SPIM_MISO, 0, 9)>,
+				<NRF_PSEL(SPIM_MOSI, 0, 8)>;
 			low-power-enable;
-		};
-		group2 {
-			psels = <NRF_PSEL(SPIM_MISO, 0, 8)>;
-			bias-pull-down;
 		};
 	};
 
