--- a/prj.conf
+++ b/prj.conf
@@ -11,7 +11,6 @@
 # enable console
 CONFIG_USE_SEGGER_RTT=y
 CONFIG_RTT_CONSOLE=y
-#CONFIG_UART_CONSOLE=n
 CONFIG_CONSOLE=y
 
 # logging
@@ -40,8 +39,8 @@ CONFIG_SHELL_BT_NUS=y
 CONFIG_SHELL_BT_NUS_LOG_LEVEL_DBG=y
 
 # Allow for large Bluetooth data packets.
-#CONFIG_BT_L2CAP_TX_MTU=252
-#CONFIG_BT_BUF_ACL_RX_SIZE=256
+CONFIG_BT_L2CAP_TX_MTU=252
+CONFIG_BT_BUF_ACL_RX_SIZE=256
 
 # Enable the Bluetooth (unauthenticated) and shell mcumgr transports.
 #CONFIG_MCUMGR_SMP_BT=y
@@ -52,7 +51,7 @@ CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 
 # File System
 # Optionally force the file system to be recreated
-CONFIG_APP_WIPE_STORAGE=y
+#CONFIG_APP_WIPE_STORAGE=y
 
 # fs_dirent structures are big.
 CONFIG_MAIN_STACK_SIZE=2048
@@ -64,24 +63,15 @@ CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 
-# Nordic specific external flash stuff
-#CONFIG_PM_EXTERNAL_FLASH=y
-#CONFIG_PM_EXTERNAL_FLASH_DEV_NAME="AT25SL321"
+# File System
 CONFIG_PM_EXTERNAL_FLASH_BASE=0x0
-#CONFIG_PM_EXTERNAL_FLASH_SIZE=0x00400000
-
 CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
 CONFIG_APP_MSC_STORAGE_FLASH_FATFS=y
 CONFIG_DISK_ACCESS=y
-
-
-
-CONFIG_PRINTK=y
-
-#CONFIG_FS_FATFS_EXFAT=y
-
-#CONFIG_MPU_ALLOW_FLASH_WRITE=y
+CONFIG_DISK_DRIVER_FLASH=y
+CONFIG_DISK_FLASH_DEV_NAME="MX25U32"
+CONFIG_DISK_VOLUME_SIZE=0x00400000
 
 # USB related configs
 CONFIG_USB_DEVICE_STACK=y
@@ -92,30 +82,19 @@ CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
 CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
 CONFIG_USB_CDC_ACM=y
 
-CONFIG_DISK_DRIVER_FLASH=y
-CONFIG_DISK_FLASH_DEV_NAME="MX25U32"
-#CONFIG_DISK_FLASH_DEV_NAME="AT25SL321"
-CONFIG_DISK_VOLUME_SIZE=0x00400000
-
 # Shell
-#CONFIG_PRINTK=y
+CONFIG_PRINTK=y
 CONFIG_SHELL=y
-#CONFIG_SHELL_MINIMAL=y
 CONFIG_SHELL_STACK_SIZE=1024
 CONFIG_SHELL_BACKEND_SERIAL=y
-
 CONFIG_THREAD_MONITOR=y
 CONFIG_INIT_STACKS=y
 CONFIG_BOOT_BANNER=n
 CONFIG_THREAD_NAME=y
-#CONFIG_LOG=n
-#CONFIG_CBPRINTF_NANO=y
-
-CONFIG_SHELL_BACKEND_SERIAL_CHECK_DTR=y
-CONFIG_UART_LINE_CTRL=y
-CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=51
-
 CONFIG_REBOOT=y
+#CONFIG_SHELL_BACKEND_SERIAL_CHECK_DTR=y
+#CONFIG_UART_LINE_CTRL=y
+#CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=51
 
 # Drivers
 CONFIG_SENSOR=y
