--- a/prj.conf
+++ b/prj.conf
@@ -1,28 +1,25 @@
-# Enable mcumgr.
-#CONFIG_MCUMGR=y
-
-# Enable most core commands.
-#CONFIG_MCUMGR_CMD_IMG_MGMT=y
-#CONFIG_MCUMGR_CMD_OS_MGMT=y
-
-# Ensure an MCUboot-compatible binary is generated.
-#CONFIG_BOOTLOADER_MCUBOOT=y
-
-# enable console
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_RTT_CONSOLE=y
-CONFIG_CONSOLE=y
-
-# logging
-CONFIG_LOG=y
-CONFIG_LOG_PRINTK=y
-CONFIG_LOG_BACKEND_RTT=y
-CONFIG_EXTRA_EXCEPTION_INFO=y
+# DataDisc project config
 
 # Enable the UART driver
 CONFIG_UART_ASYNC_API=y
 CONFIG_NRFX_UARTE0=y
 CONFIG_SERIAL=y
+
+# enable console
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+
+# Config logger
+CONFIG_LOG=y
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_LOG_BACKEND_RTT=y
+CONFIG_LOG_BACKEND_UART=n
+
+CONFIG_ASSERT=y
+
+CONFIG_EXTRA_EXCEPTION_INFO=y
+
+CONFIG_HEAP_MEM_POOL_SIZE=2048
 
 # Bluetooth
 CONFIG_BT=y
@@ -34,20 +31,16 @@ CONFIG_BT_MAX_CONN=2
 CONFIG_BT_MAX_PAIRED=2
 CONFIG_BT_BAS=y
 
-# Enable the BT NUS shell
-CONFIG_SHELL_BT_NUS=y
-CONFIG_SHELL_BT_NUS_LOG_LEVEL_DBG=y
+# Enable the BT NUS service
+CONFIG_BT_NUS=y
 
-# Allow for large Bluetooth data packets.
-CONFIG_BT_L2CAP_TX_MTU=252
-CONFIG_BT_BUF_ACL_RX_SIZE=256
-
-# Enable the Bluetooth (unauthenticated) and shell mcumgr transports.
-#CONFIG_MCUMGR_SMP_BT=y
-#CONFIG_MCUMGR_SMP_BT_AUTHEN=n
-
-# Some command handlers require a large stack.
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
+# Enable bonding
+CONFIG_BT_SETTINGS=y
+CONFIG_FLASH=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_FLASH_MAP=y
+CONFIG_NVS=y
+CONFIG_SETTINGS=y
 
 # File System
 # Optionally force the file system to be recreated
@@ -58,10 +51,6 @@ CONFIG_MAIN_STACK_SIZE=2048
 
 # Let __ASSERT do its job
 CONFIG_DEBUG=y
-
-CONFIG_FLASH=y
-CONFIG_FLASH_MAP=y
-CONFIG_FLASH_PAGE_LAYOUT=y
 
 # File System
 CONFIG_PM_EXTERNAL_FLASH_BASE=0x0
@@ -74,13 +63,8 @@ CONFIG_DISK_FLASH_DEV_NAME="MX25U32"
 CONFIG_DISK_VOLUME_SIZE=0x00400000
 
 # USB related configs
-CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_DEVICE_PRODUCT="DataDisc"
-CONFIG_USB_DRIVER_LOG_LEVEL_ERR=y
-CONFIG_USB_MASS_STORAGE=y
-CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
-CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
-CONFIG_USB_CDC_ACM=y
+#CONFIG_USB_MASS_STORAGE=y
+#CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
 
 # Shell
 CONFIG_PRINTK=y
