--- a/boards/datadisc_nrf5340_cpuapp.conf
+++ b/boards/datadisc_nrf5340_cpuapp.conf
@@ -5,17 +5,18 @@
 #
 ################################################################################
 # Application overlay - DataDisc DFU
-CONFIG_MCUMGR=y
-CONFIG_MCUMGR_SMP_BT=y
-CONFIG_MCUMGR_SMP_BT_AUTHEN=n
-CONFIG_MCUMGR_SMP_BT_CONN_PARAM_CONTROL=y
+# CONFIG_MCUMGR=y
+# CONFIG_MCUMGR=y
+# CONFIG_MCUMGR_SMP_BT=y
+# CONFIG_MCUMGR_SMP_BT_AUTHEN=n
+# CONFIG_MCUMGR_SMP_BT_CONN_PARAM_CONTROL=y
 
-CONFIG_MCUMGR_CMD_IMG_MGMT=y
-CONFIG_MCUMGR_CMD_OS_MGMT=y
+# CONFIG_MCUMGR_CMD_IMG_MGMT=y
+# CONFIG_MCUMGR_CMD_OS_MGMT=y
 
 # Enable custom SMP request to erase settings partition.
-CONFIG_MCUMGR_GRP_ZEPHYR_BASIC=y
-CONFIG_MCUMGR_GRP_BASIC_CMD_STORAGE_ERASE=y
+# CONFIG_MCUMGR_GRP_ZEPHYR_BASIC=y
+# CONFIG_MCUMGR_GRP_BASIC_CMD_STORAGE_ERASE=y
 
 # Increase system workqueue stack size to prevent stack overflows while handling
 # SMP requests.
@@ -34,13 +35,13 @@ CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=400
 ################################################################################
 # Bootloader configuration
 
-CONFIG_BOOTLOADER_MCUBOOT=y
-CONFIG_MCUBOOT_IMAGE_VERSION="1.0.0+0"
-CONFIG_UPDATEABLE_IMAGE_NUMBER=2
+# CONFIG_BOOTLOADER_MCUBOOT=y
+# CONFIG_MCUBOOT_IMAGE_VERSION="1.0.0+0"
+# CONFIG_UPDATEABLE_IMAGE_NUMBER=2
 
-CONFIG_IMG_MANAGER=y
-CONFIG_MCUBOOT_IMG_MANAGER=y
-CONFIG_IMG_ERASE_PROGRESSIVELY=y
+# CONFIG_IMG_MANAGER=y
+# CONFIG_MCUBOOT_IMG_MANAGER=y
+# CONFIG_IMG_ERASE_PROGRESSIVELY=y
 
 ################################################################################
 # External flash configuration
@@ -51,7 +52,7 @@ CONFIG_NORDIC_QSPI_NOR_STACK_WRITE_BUFFER_SIZE=16
 
 # FLASH nop device is enabled to prevent bus faults when mcumgr tries to access
 # simulated partition with network core image data.
-CONFIG_FLASH_NOP_DEVICE=y
+# CONFIG_FLASH_NOP_DEVICE=y
 
 ################################################################################
 # Enable USB CDC ACM
@@ -66,14 +67,14 @@ CONFIG_USB_CDC_ACM=y
 CONFIG_USB_CDC_ACM_LOG_LEVEL_ERR=y
 CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
 
-CONFIG_LOG_BACKEND_UART=y
+#CONFIG_LOG_BACKEND_UART=y
 CONFIG_LOG_PRINTK=y
 CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=1024
-CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=4000
+#CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=4000
 
-CONFIG_BT_NUS_UART_ASYNC_ADAPTER=y
-CONFIG_UART_INTERRUPT_DRIVEN=y
+# CONFIG_BT_NUS_UART_ASYNC_ADAPTER=y
+# CONFIG_UART_INTERRUPT_DRIVEN=y
 
 # Disable the UARTE0 enabled in default project configuration
-CONFIG_NRFX_UARTE0=n
-CONFIG_UART_NRFX=n
+# CONFIG_NRFX_UARTE0=n
+# CONFIG_UART_NRFX=n
