--- a/prj.conf
+++ b/prj.conf
@@ -35,12 +35,12 @@ CONFIG_BT_BAS=y
 CONFIG_BT_NUS=y
 
 # Enable bonding
-CONFIG_BT_SETTINGS=y
-CONFIG_FLASH=y
-CONFIG_FLASH_PAGE_LAYOUT=y
-CONFIG_FLASH_MAP=y
-CONFIG_NVS=y
-CONFIG_SETTINGS=y
+#CONFIG_BT_SETTINGS=y
+#CONFIG_FLASH=y
+#CONFIG_FLASH_PAGE_LAYOUT=y
+#CONFIG_FLASH_MAP=y
+#CONFIG_NVS=y
+#CONFIG_SETTINGS=y
 
 # File System
 # Optionally force the file system to be recreated
@@ -53,24 +53,24 @@ CONFIG_MAIN_STACK_SIZE=2048
 CONFIG_DEBUG=y
 
 # File System
-CONFIG_PM_EXTERNAL_FLASH_BASE=0x0
+CONFIG_PM_EXTERNAL_FLASH_BASE=0x120000
 CONFIG_FILE_SYSTEM=y
 CONFIG_FAT_FILESYSTEM_ELM=y
 CONFIG_APP_MSC_STORAGE_FLASH_FATFS=y
 CONFIG_DISK_ACCESS=y
 CONFIG_DISK_DRIVER_FLASH=y
 CONFIG_DISK_FLASH_DEV_NAME="MX25U32"
-CONFIG_DISK_VOLUME_SIZE=0x00400000
+CONFIG_DISK_VOLUME_SIZE=0x6e0000
 
 # USB related configs
-#CONFIG_USB_MASS_STORAGE=y
-#CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
+CONFIG_USB_MASS_STORAGE=y
+CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
 
 # Shell
 CONFIG_PRINTK=y
 CONFIG_SHELL=y
 CONFIG_SHELL_STACK_SIZE=1024
-CONFIG_SHELL_BACKEND_SERIAL=y
+CONFIG_SHELL_BACKEND_SERIAL=n
 CONFIG_THREAD_MONITOR=y
 CONFIG_INIT_STACKS=y
 CONFIG_BOOT_BANNER=n
