--- a/prj.conf
+++ b/prj.conf
@@ -1,12 +1,12 @@
 # Enable mcumgr.
-CONFIG_MCUMGR=y
+#CONFIG_MCUMGR=y
 
 # Enable most core commands.
-CONFIG_MCUMGR_CMD_IMG_MGMT=y
-CONFIG_MCUMGR_CMD_OS_MGMT=y
+#CONFIG_MCUMGR_CMD_IMG_MGMT=y
+#CONFIG_MCUMGR_CMD_OS_MGMT=y
 
 # Ensure an MCUboot-compatible binary is generated.
-CONFIG_BOOTLOADER_MCUBOOT=y
+#CONFIG_BOOTLOADER_MCUBOOT=y
 
 # enable console
 CONFIG_USE_SEGGER_RTT=y
@@ -47,8 +47,8 @@ CONFIG_BT_L2CAP_TX_MTU=252
 CONFIG_BT_BUF_ACL_RX_SIZE=256
 
 # Enable the Bluetooth (unauthenticated) and shell mcumgr transports.
-CONFIG_MCUMGR_SMP_BT=y
-CONFIG_MCUMGR_SMP_BT_AUTHEN=n
+#CONFIG_MCUMGR_SMP_BT=y
+#CONFIG_MCUMGR_SMP_BT_AUTHEN=n
 
 # Some command handlers require a large stack.
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
