Trying to get it to build again

--- a/prj.conf
+++ b/prj.conf
@@ -23,26 +23,33 @@ CONFIG_HEAP_MEM_POOL_SIZE=2048
 
 # Bluetooth
 CONFIG_BT=y
-CONFIG_BT_SMP=y
+#CONFIG_BT_SMP=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="DataDisc v2"
-CONFIG_BT_DEVICE_APPEARANCE=1345
-CONFIG_BT_MAX_CONN=2
-CONFIG_BT_MAX_PAIRED=2
+#CONFIG_BT_DEVICE_APPEARANCE=1345
+#CONFIG_BT_MAX_CONN=2
+#CONFIG_BT_MAX_PAIRED=2
 CONFIG_BT_BAS=y
-
-# Enable the BT NUS service
-CONFIG_BT_NUS=y
+#CONFIG_BT_NUS=y
 
 # Enable bonding
 #CONFIG_BT_SETTINGS=y
-#CONFIG_FLASH=y
-#CONFIG_FLASH_PAGE_LAYOUT=y
-#CONFIG_FLASH_MAP=y
+CONFIG_FLASH=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_FLASH_MAP=y
 #CONFIG_NVS=y
 #CONFIG_SETTINGS=y
 
 # File System
+CONFIG_PM_EXTERNAL_FLASH_BASE=0x0
+CONFIG_FILE_SYSTEM=y
+CONFIG_FAT_FILESYSTEM_ELM=y
+CONFIG_APP_MSC_STORAGE_FLASH_FATFS=y
+CONFIG_DISK_ACCESS=y
+CONFIG_DISK_DRIVER_FLASH=y
+CONFIG_DISK_FLASH_DEV_NAME="MX25U32"
+CONFIG_DISK_VOLUME_SIZE=0x4000000
+
 # Optionally force the file system to be recreated
 #CONFIG_APP_WIPE_STORAGE=y
 
@@ -52,30 +59,31 @@ CONFIG_MAIN_STACK_SIZE=2048
 # Let __ASSERT do its job
 CONFIG_DEBUG=y
 
-# File System
-CONFIG_PM_EXTERNAL_FLASH_BASE=0x120000
-CONFIG_FILE_SYSTEM=y
-CONFIG_FAT_FILESYSTEM_ELM=y
-CONFIG_APP_MSC_STORAGE_FLASH_FATFS=y
-CONFIG_DISK_ACCESS=y
-CONFIG_DISK_DRIVER_FLASH=y
-CONFIG_DISK_FLASH_DEV_NAME="MX25U32"
-CONFIG_DISK_VOLUME_SIZE=0x6e0000
+# Enable USB CDC ACM
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_DEVICE_REMOTE_WAKEUP=n
+CONFIG_USB_DEVICE_PRODUCT="DataDisc"
+CONFIG_USB_DEVICE_VID=0x1915
+CONFIG_USB_DEVICE_PID=0x530E
+CONFIG_USB_COMPOSITE_DEVICE=y
+CONFIG_USB_CDC_ACM=y
+CONFIG_USB_CDC_ACM_LOG_LEVEL_ERR=y
+CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
 
 # USB related configs
 CONFIG_USB_MASS_STORAGE=y
 CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
 
 # Shell
-CONFIG_PRINTK=y
-CONFIG_SHELL=y
-CONFIG_SHELL_STACK_SIZE=1024
-CONFIG_SHELL_BACKEND_SERIAL=n
-CONFIG_THREAD_MONITOR=y
-CONFIG_INIT_STACKS=y
-CONFIG_BOOT_BANNER=n
-CONFIG_THREAD_NAME=y
-CONFIG_REBOOT=y
+#CONFIG_PRINTK=y
+#CONFIG_SHELL=y
+#CONFIG_SHELL_STACK_SIZE=1024
+#CONFIG_SHELL_BACKEND_SERIAL=n
+#CONFIG_THREAD_MONITOR=y
+#CONFIG_INIT_STACKS=y
+#CONFIG_BOOT_BANNER=n
+#CONFIG_THREAD_NAME=y
+#CONFIG_REBOOT=y
 #CONFIG_SHELL_BACKEND_SERIAL_CHECK_DTR=y
 #CONFIG_UART_LINE_CTRL=y
 #CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=51
