--- a/prj.conf
+++ b/prj.conf
@@ -79,7 +79,7 @@ CONFIG_USB_DRIVER_LOG_LEVEL_ERR=y
 CONFIG_USB_MASS_STORAGE=y
 CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
 CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
-CONFIG_USB_CDC_ACM=y
+#CONFIG_USB_CDC_ACM=y
 
 CONFIG_APP_MSC_STORAGE_FLASH_FATFS=y
 
@@ -91,10 +91,10 @@ CONFIG_DISK_VOLUME_SIZE=0x00400000
 
 # Shell
 CONFIG_PRINTK=y
-CONFIG_SHELL=y
+#CONFIG_SHELL=y
 #CONFIG_SHELL_MINIMAL=y
 #CONFIG_SHELL_STACK_SIZE=1024
-CONFIG_SHELL_BACKEND_SERIAL=y
+#CONFIG_SHELL_BACKEND_SERIAL=y
 
 #CONFIG_THREAD_MONITOR=y
 #CONFIG_INIT_STACKS=y
@@ -103,15 +103,14 @@ CONFIG_SHELL_BACKEND_SERIAL=y
 #CONFIG_LOG=n
 #CONFIG_CBPRINTF_NANO=y
 
-CONFIG_SHELL_BACKEND_SERIAL_CHECK_DTR=y
-CONFIG_UART_LINE_CTRL=y
-CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=51
+#CONFIG_SHELL_BACKEND_SERIAL_CHECK_DTR=y
+#CONFIG_UART_LINE_CTRL=y
+#CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=51
 
-CONFIG_REBOOT=y
+#CONFIG_REBOOT=y
 
 # Drivers
 CONFIG_SENSOR=y
-CONFIG_KX134=y
 
 CONFIG_GPIO=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
