Stuff for fixing

--- a/boards/arm/datadisc_nrf5340/datadisc_nrf5340_cpuapp_defconfig
+++ b/boards/arm/datadisc_nrf5340/datadisc_nrf5340_cpuapp_defconfig
@@ -20,5 +20,14 @@ CONFIG_SOC_LFXO_CAP_INT_6PF=y
 CONFIG_SOC_HFXO_CAP_INTERNAL=y
 CONFIG_SOC_HFXO_CAP_INT_VALUE_X2=32
 
-# configure pin control
+# enable GPIO
+CONFIG_GPIO=y
+
+# Enable uart driver
+CONFIG_SERIAL=y
+
+# enable console
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+
 CONFIG_PINCTRL=y
