--- a/prj.conf
+++ b/prj.conf
@@ -3,11 +3,6 @@
 # Enable the UART driver
 CONFIG_UART_ASYNC_API=y
 CONFIG_NRFX_UARTE0=y
-CONFIG_SERIAL=y
-
-# enable console
-CONFIG_CONSOLE=y
-CONFIG_UART_CONSOLE=y
 
 # Config logger
 CONFIG_LOG=y
@@ -15,9 +10,9 @@ CONFIG_USE_SEGGER_RTT=y
 CONFIG_LOG_BACKEND_RTT=y
 CONFIG_LOG_BACKEND_UART=n
 
-CONFIG_ASSERT=y
+#CONFIG_ASSERT=y
 
-CONFIG_EXTRA_EXCEPTION_INFO=y
+#CONFIG_EXTRA_EXCEPTION_INFO=y
 
 CONFIG_HEAP_MEM_POOL_SIZE=2048
 
@@ -34,9 +29,9 @@ CONFIG_BT_BAS=y
 
 # Enable bonding
 #CONFIG_BT_SETTINGS=y
-CONFIG_FLASH=y
-CONFIG_FLASH_PAGE_LAYOUT=y
-CONFIG_FLASH_MAP=y
+#CONFIG_FLASH=y
+#CONFIG_FLASH_PAGE_LAYOUT=y
+#CONFIG_FLASH_MAP=y
 #CONFIG_NVS=y
 #CONFIG_SETTINGS=y
 
@@ -57,20 +52,10 @@ CONFIG_DISK_VOLUME_SIZE=0x4000000
 CONFIG_MAIN_STACK_SIZE=2048
 
 # Let __ASSERT do its job
-CONFIG_DEBUG=y
-
-# Enable USB CDC ACM
-CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_DEVICE_REMOTE_WAKEUP=n
-CONFIG_USB_DEVICE_PRODUCT="DataDisc"
-CONFIG_USB_DEVICE_VID=0x1915
-CONFIG_USB_DEVICE_PID=0x530E
-CONFIG_USB_COMPOSITE_DEVICE=y
-CONFIG_USB_CDC_ACM=y
-CONFIG_USB_CDC_ACM_LOG_LEVEL_ERR=y
-CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
+#CONFIG_DEBUG=y
 
 # USB related configs
+CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_MASS_STORAGE=y
 CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
 
@@ -91,7 +76,6 @@ CONFIG_USB_MASS_STORAGE_LOG_LEVEL_ERR=y
 # Drivers
 CONFIG_SENSOR=y
 
-CONFIG_GPIO=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
 
 CONFIG_SPI=y
