--- a/boards/arm/datadisc_nrf5340/Kconfig
+++ b/boards/arm/datadisc_nrf5340/Kconfig
@@ -21,7 +21,9 @@ config BOARD_ENABLE_DCDC_HV
 	default n
 
 config BOARD_ENABLE_CPUNET
-	bool "Enable nRF53 Network MCU"
+	bool "NRF53 Network MCU"
+	select SOC_NRF_GPIO_FORWARDER_FOR_NRF5340 if \
+		$(dt_compat_enabled,$(DT_COMPAT_NORDIC_NRF_GPIO_FORWARDER))
 	help
 	  This option enables releasing the Network 'force off' signal, which
 	  as a consequence will power up the Network MCU during system boot.
@@ -44,7 +46,7 @@ config DOMAIN_CPUNET_BOARD
 	  another board. For example hci_rpmsg on the nRF5340_cpunet for
 	  Bluetooth applications.
 
-endif # BOARD_DATADISC_NRF5340_CPUAPP || BOARD_DATADISC_NRF5340_CPUAPPNS
+endif #  BOARD_DATADISC_NRF5340_CPUAPP
 
 config DOMAIN_CPUAPP_BOARD
 	string
