--- a/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common.dts
+++ b/boards/arm/datadisc_nrf5340/nrf5340_cpuapp_common.dts
@@ -12,6 +12,7 @@
 		zephyr,uart-mcumgr = &uart0;
 		zephyr,bt-mon-uart = &uart0;
 		zephyr,bt-c2h-uart = &uart0;
+		zephyr,bt-hci-rpmsg-ipc = &ipc0;
 	};
 	
 	pwmleds {
@@ -25,7 +26,7 @@
 		compatible = "nordic,nrf-gpio-forwarder";
 		status = "okay";
 		uart {
-			gpios = <&gpio0 20 0>, <&gpio0 22 0>, <&gpio0 19 0>, <&gpio0 21 0>;
+			gpios = <&gpio0 24 0>, <&gpio0 30 0>, <&gpio0 23 0>, <&gpio0 29 0>;
 		};
 	};
 	
@@ -224,6 +225,11 @@
 			reg = <0x000fa000 0x00006000>;
 		};
 	};
+};
+
+zephyr_udc0: &usbd {
+	compatible = "nordic,nrf-usbd";
+	status = "okay";
 };
 
 / {
